# sudoku

./: .gitignore  CMakeLists.txt  README.md  TODO
include/: ai.h  aux.h  game.h  logics.h
src/: ai.c  aux.c  config.c  game.c  logics.c  main.c
